# Bridgemate-Data-Connector-Scoring-Program-Client-Python

./: .gitignore  CONTRIBUTING.md  README.md  SUPPORT.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: getting_started.py
examples/data/: init-template.json  players.json
examples/support/: echo_transport.py
src/bridgemate_dataconnector/: __init__.py  client.py  http_transport.py  transport_exception.py  urllib_transport.py
src/bridgemate_dataconnector/dto/: __init__.py  _support.py  bm2_contract_representation_option.py  bm2_enter_handrecord_when_option.py  bm2_name_source.py  bm2_number_validation_option.py  bm2_pair_number_entry_option.py  bm2_point_score_perspective_option.py  bm2_result_entry_method.py  bm2_results_overview_option.py  bm2_show_player_names_option.py  bm2_show_ranking_option.py  bm2_summary_point_option.py  bm3_confirm_np_option.py  bm3_connection_mode_option.py  bm3_enter_handrecord_option.py  bm3_language_option.py  bm3_lead_card_entry_option.py  bm3_next_round_seating_option.py  bm3_player_number_mandatory_option.py  bm3_player_registration_option.py  bm3_player_registration_option_during_play.py  bm3_player_view_option.py  bm3_ranking_display_option.py  bm3_result_entry_method.py  bm3_result_reentry_option.py  bm3_score_column_option.py  bm3_score_recap_option.py  bm3_session_summary_option.py  bm3_starting_positions_option.py  bm3_td_call_option.py  bm3_view_handrecord_option.py  bm3_view_percentages_option.py  continue_dto.py  (+22 more)
tests/: fake_transport.py  test_data_connector_client.py  test_fixture_round_trip.py
(+36 files in other folders)
